transaction not recur

--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -13,11 +13,11 @@
   <h2>Customer Information</h2>
   <dl>
     <dt>First Name</dt>
-    <dd><%= current_user.first_name %></dd>
+    <dd><%= @user.first_name %></dd>
     <dt>Last Name</dt>
-    <dd><%= current_user.last_name %></dd>
+    <dd><%= @user.last_name %></dd>
     <dt>Phone</dt>
-    <dd><%= current_user.phone %></dd>
+    <dd><%= @user.phone %></dd>
   </dl>
   <h2>Credit Card Information</h2>
   <dl>
